<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/img_avatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF909090"/>
    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:textColor="@color/white"
        android:layout_toEndOf="@id/img_avatar"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txt_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:layout_toEndOf="@id/img_avatar"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/calories" />
    <TextView
        android:id="@+id/txt_vitamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_calories"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:layout_toEndOf="@id/img_avatar"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/vitamin" />

</RelativeLayout>